# kicad_bom

./: .gitignore  .gitmodules  CMakeLists.txt  Component.cc  Component.h  README.md  kicad_bom.cc
test/: CMakeLists.txt  component_test.cc
